# sys-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  rust_ci.yml
src/: asm.rs  breakpoint.rs  command.rs  cov.rs  coverage.rs  debug.rs  diag.rs  elf.rs  error.rs  exec.rs  handler.rs  hwaccess.rs  input.rs  inspect.rs  lib.rs  param.rs  print.rs  process.rs  profile.rs  progress.rs  repl.rs  strace.rs  syscall.rs  syscall_defs.rs  trace.rs
src/asm/: instruction.rs  mod.rs
src/data/: syscall.json
src/dwarf/: line.rs  mod.rs
src/exec/: mod.rs
src/exec/symbol/: line.rs  mod.rs
src/syscall/: def.json  def.rs  info.json  info.rs  mod.rs  model.rs  printer.rs  repr.rs  wrapper.rs
src/trace/: cov.rs  mod.rs
tests/: addr2line.rs  dbg.rs  example.c  gcov.rs  sscov.rs  strace.rs  testlib.rs
tests/example/: example.c  example.c.cov.ref
