[package]
authors = ["yrakcaz <zackaryayoun@gmail.com>"]
categories = ["Development tools", "Operating systems"]
description = "Re-writing some of the Linux system tools in Rust as a toy project"
edition = "2021"
keywords = ["Linux", "system", "tools"]
license = "MIT"
readme = "README.md"
name = "sys-rs"
repository = "https://github.com/yrakcaz/sys-rs"
version = "1.0.1"

[[bin]]
name="addr2line-rs"
path="src/bin/addr2line.rs"

[[bin]]
name="gcov-rs"
path="src/bin/gcov.rs"

[[bin]]
name = "sscov-rs"
path = "src/bin/sscov.rs"

[[bin]]
name = "strace-rs"
path = "src/bin/strace.rs"

[dependencies]
capstone = "0.12.0"
ctor = "0.2.8"
gimli = "0.28.1"
goblin = "0.8.0"
libc = "0.2.153"
nix = { version = "0.28.0", features = ["fs", "process", "ptrace"] }
procfs = "0.16.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
serial_test = "3.1.1"
tempfile = "=3.11.0"

[lints.clippy]
all = "deny"
cargo = "deny"
pedantic = "deny"
